// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`argument-expansion.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const bar1 = [1,2,3].reduce((carry, value) => {
  return [...carry, value];
}, ([]: Array<string>));

=====================================output=====================================
const bar1 = [1, 2, 3].reduce((carry, value) => {
  return [...carry, value];
}, ([]: Array<string>));

================================================================================
`;

exports[`expression.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let x: string = (foo: string);

// https://github.com/prettier/prettier/issues/3936
const foo = ((1?2:3): number);

=====================================output=====================================
let x: string = (foo: string);

// https://github.com/prettier/prettier/issues/3936
const foo = ((1 ? 2 : 3): number);

================================================================================
`;

exports[`statement.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: string;
bar: number;
(foo.bar: SomeType);

=====================================output=====================================
foo: string;
bar: number;
(foo.bar: SomeType);

================================================================================
`;
